# ferros

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
scripts/: build.sh  run.sh  setup.sh
src/: lib.rs  main.rs
src/driver/vga/: attribute.rs  buffer.rs  character.rs  color.rs  mod.rs  writer.rs
src/libs/: buffer.rs  mod.rs
src/libs/testing/: mod.rs  qemu.rs  serial.rs  traits.rs
src/nucleus/interrupt/: idt.rs  mod.rs  stack_frame.rs
tests/: basic_boot.rs
