[package]
name = "ferros"
version = "0.1.0"
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 10

[dependencies]
bootloader = "0.9.28"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.15.1"
